--- a/style.css
+++ b/style.css
@@ -21,8 +21,12 @@ h2{
     color: transparent;
     background-clip: text;
     text-align: center;
-    font-size: 30px;
+    font-size: 35px;
 }
 p{
     text-align: center;
+    color: rgb(49, 226, 43);
+    font-weight: bold;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
 }
